--- a/app/src/main/res/layout/fragment_media.xml
+++ b/app/src/main/res/layout/fragment_media.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/nav_tab_background"
-    tools:context=".ui.media.MediaFragment">
+    tools:context=".ui.media.fragments.MediaFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
