--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -117,4 +117,24 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight" tools:targetApi="p">400</item>
     </style>
+
+    <style name="FragmentPlayerBSTextStyle">
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:textSize">@dimen/text_size_19sp</item>
+    </style>
+
+    <style name="ItemPLBSTextStyle">
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:textSize">@dimen/text_size_16sp</item>
+    </style>
+
+    <style name="ItemSmallTextStyle">
+        <item name="android:textColor">@color/yp_grey</item>
+        <item name="android:textSize">@dimen/text_size_11sp</item>
+    </style>
+
+    <style name="ItemPLTextStyle">
+        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:textSize">@dimen/text_size_16sp</item>
+    </style>
 </resources>
