--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -72,7 +72,7 @@
         app:title="@string/new_playlist"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_create"
+        android:id="@+id/btn_complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_16dp"
