--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorBottomSheetBackground">#1A1B22</color>
     <color name="colorBottomSheetOverlay">#99000000</color>
     <color name="npl_text_input">#FFFFFF</color>
+    <color name="colorPlaylistBackground">#E6E8EB</color>
+    <color name="colorCommonText">#1A1B22</color>
+    <color name="colorText">#FFFFFFFF</color>
+    <color name="colorTextToolbar">#FFFFFFFF</color>
 </resources>
