--- a/app/src/main/res/layout/fragment_playlist_data.xml
+++ b/app/src/main/res/layout/fragment_playlist_data.xml
@@ -76,6 +76,7 @@
                 android:id="@+id/btnShare"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/share"
@@ -167,6 +168,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_12dp"
+            android:layout_marginHorizontal="@dimen/margin_12dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/track_card" />
     </LinearLayout>
